--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,17 @@
+* {
+    margin: 0;
+}
+
 
 body {
-    background-color: #f5f6f7;
+    text-align: center;
+    justify-items: center;
+}
+
+a {
+    font-size: larger;
+    font-weight: bold;
+    color: rgb(0, 255, 34);
 }
 
 h1 {
@@ -9,18 +20,28 @@ h1 {
     text-align: center;
 }
 
-img{
-   border-radius:50% ;
-   height: 100%;
-   width: auto;
+
+img {
+    border-radius: 50%;
+    height: 100%;
+    width: auto;
 }
 
 button {
     background-color: #255685;
     color: white;
     padding: 15px 32px;
-  }
-  
+}
+
+table {
+    margin: 0 auto;
+
+}
+
+.contenido-index{
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
+}
+
 .contenedor-testimonio {
     width: 1170px;
     height: 368px;
@@ -39,11 +60,14 @@ button {
     font-weight: 400;
     line-height: 1.5rem;
 }
-.estrella{
-    fill:aqua;
-    stroke:blue;
-    stroke-width:1;fill-rule:evenodd
+
+.estrella {
+    fill: aqua;
+    stroke: blue;
+    stroke-width: 1;
+    fill-rule: evenodd
 }
+
 .nombre-alumno {
     font-size: 1.3rem;
 }
